--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="de.florianm.android.materialsearchview.MainActivity">
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -14,9 +13,6 @@
     <de.florianm.android.materialsearchview.MaterialSearchView
         android:id="@+id/searchView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:searchBackIcon="@drawable/ic_arrow_back_red_500_24dp"
-        app:searchClearIcon="@drawable/ic_close_red_500_24dp"
-        app:searchVoiceIcon="@drawable/ic_keyboard_voice_red_500_24dp" />
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
